Button fix on mobile

--- a/interface.css
+++ b/interface.css
@@ -80,10 +80,12 @@ button {
     transition: 100ms ease-in;
     margin-top: 10px;
 
+  @media (min-width: 768px) {
     &:hover {
         cursor: pointer;
         background-color: lightgrey;
     }
+  }
 
     &:focus-visible {
         outline-offset: 12px;
